[package]
name = "arcdps_boss_timers"
version = "0.0.1"
authors = ["Vildravn"]
edition = "2021"

[dependencies]
arcdps = { git = "https://github.com/zerthox/arcdps-bindings", features = ["extras", "log"] }
arc_util = { git = "https://github.com/zerthox/arcdps-utils" }
log = { version = "0.4.17", features = ["release_max_level_info"] }
gw2_mumble = { git = "https://github.com/zerthox/gw2-mumble-rs" }

[lib]
crate-type = ["cdylib"]
